Straighten the alignment of the content below the breadcrumbs. Includes a fix for MSIE6 where it did not leave space below breadcrumb and to work around the lack of selector.
git-svn-id: https://svn.physiomeproject.org/svn/physiome/cellml.theme/trunk@3545 eb92df5b-a40c-0410-b02c-bf52feaaa166

--- a/cellml/theme/browser/stylesheets/base.css
+++ b/cellml/theme/browser/stylesheets/base.css
@@ -472,6 +472,10 @@ ul.sideList {
     display: none;
 }
 
+#content h1:first-child {
+    margin-top: 0 !important;
+}
+
 
 /* ---------------------- END secondary typography: content, lists and links ---------------------- */
 
